Save target device separately for each run configuration
This change re-applies the change that was reverted by ag/22892742 but
with an extra fix to prevent the regression identified in b/279841513.

Fixes: 204758808
Test: DevicesSelectedServiceTest, SelectMultipleDevicesDialogTest,
 UpdaterTest, DeviceAndSnapshotComboBoxActionTest, manual
Change-Id: Iffdc459ca113be68a0ff7666e69c40b51af50858

GitOrigin-RevId: 6261f89cc97052ef4d75751e0d3e3e99dc8963ad